--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@types/node": "^16.11.5",
     "git-commit-msg-linter": "^3.2.8"
   },
   "keywords": [
