--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.5",
-    "git-commit-msg-linter": "^3.2.8"
+    "git-commit-msg-linter": "^3.2.8",
+    "typescript": "^4.4.4"
   },
   "keywords": [
     "typescript",
