--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "main": "index.js",
   "description": "A template API",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --passWithNoTests --runInBand --no-cache",
+    "test:verbose": "npm test -- --verbose",
+    "test:unit": "npm test -- --watch -c jest-unit-config.js",
+    "test:integration": "npm test -- --watch -c jest-integration-config.js",
+    "test:staged": "npm test -- --findRelatedTests",
+    "test:ci": "npm test -- --coverage",
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.11.5",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "eslint": "^7.32.0",
@@ -17,7 +23,9 @@
     "eslint-plugin-promise": "^5.1.1",
     "git-commit-msg-linter": "^3.2.8",
     "husky": "^7.0.4",
+    "jest": "^27.3.1",
     "lint-staged": "^11.2.4",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   },
   "keywords": [
