--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "description": "A template API",
   "scripts": {
+    "lint": "eslint --fix \"src/**/*.ts\" && tsc --noEmit -p .",
     "test": "jest --passWithNoTests --runInBand --no-cache",
     "test:verbose": "npm test -- --verbose",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
