--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "check:updates": "npx npm-check -s -u"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
